--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
 <app-student-form></app-student-form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="Angular_Forms/tree/main">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
