--- a/src/app/student-form/student-form.component.css
+++ b/src/app/student-form/student-form.component.css
@@ -6,7 +6,9 @@ form {
     margin: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   }
-  
+  .ng-invalid {
+    border-color: #ccc !important;
+  }
   label {
     display: block;
     font-weight: bold;
